# nimbus-mail

./: .gitignore  CLAUDE.md  Cargo.toml  License.md  README.md  RELEASE_NOTES_TEMPLATE.md  SBOM.md  audit.toml  deny.toml  osv-scanner.toml
.github/: dependabot.yml  release.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  release.yml  semgrep.yml  smoke.yml  weekly-security.yml
crates/nimbus-caldav/: Cargo.toml
crates/nimbus-caldav/src/: calendars.rs  client.rs  discovery.rs  expand.rs  ical.rs  lib.rs  sync.rs  write.rs  xml_util.rs
crates/nimbus-carddav/: Cargo.toml
crates/nimbus-carddav/src/: client.rs  discovery.rs  lib.rs  sync.rs  vcard.rs  write.rs  xml_util.rs
crates/nimbus-core/: Cargo.toml
crates/nimbus-core/src/: error.rs  lib.rs  models.rs  tls.rs  url.rs
crates/nimbus-discovery/: Cargo.toml
crates/nimbus-discovery/src/: autoconfig.rs  lib.rs  srv.rs
crates/nimbus-imap/: Cargo.toml
crates/nimbus-imap/src/: client.rs  lib.rs  mutf7.rs
crates/nimbus-jmap/: Cargo.toml
crates/nimbus-jmap/src/: client.rs  lib.rs  types.rs
crates/nimbus-jmap/tests/: mock_server.rs
crates/nimbus-nextcloud/: Cargo.toml
crates/nimbus-nextcloud/src/: auth.rs  capabilities.rs  client.rs  files.rs  lib.rs  notes.rs  shares.rs  talk.rs  user.rs
crates/nimbus-smtp/: Cargo.toml
crates/nimbus-smtp/src/: client.rs  lib.rs
crates/nimbus-store/: Cargo.toml
crates/nimbus-store/src/: account_store.rs  app_settings.rs  credentials.rs  fido.rs  lib.rs  link_check.rs  nextcloud_store.rs  settings_bundle.rs  settings_sync.rs
crates/nimbus-store/src/cache/: calendars.rs  contacts.rs  key.rs  mod.rs  pool.rs  schema.rs  search.rs
icons/: DISCLAIMER.md  ICON_DESIGN_REFERENCE.md
icons/icons-rework/: README.md
icons/icons-rework/svelte/icons/: Attachment.svelte  DeleteColumn.svelte  DeleteRow.svelte  NumberedList.svelte  Quote.svelte  TextColor.svelte
icons/icons-v1/: README.md
icons/icons-v1/svelte/: Icon.svelte
icons/icons-v1/svelte/icons/: Calendar.svelte  Contacts.svelte  Files.svelte  Meetings.svelte  Read.svelte  RsvpAccept.svelte  Unread.svelte
icons/icons-v2/: README.md
icons/icons-v2/svelte/: Icon.svelte
icons/icons-v2/svelte/icons/: AddAccount.svelte  Archive.svelte  Block.svelte  DoNotDisturb.svelte  Drafts.svelte  Encrypted.svelte  Forward.svelte  Loading.svelte  Lock.svelte  Mute.svelte  Print.svelte  Refresh.svelte  Reply.svelte  Search.svelte  Sent.svelte  Sort.svelte  Spam.svelte  Trash.svelte  Verified.svelte
icons/icons-v3/: README.md
icons/icons-v3/svelte/: Icon.svelte
icons/icons-v3/svelte/icons/: ArrowRight.svelte  Away.svelte  Cloud.svelte  Error.svelte  Info.svelte  NavForward.svelte  OpenLink.svelte  OpenOnDesktop.svelte  SaveDraft.svelte  Translate.svelte
icons/icons-v4/: README.md
icons/icons-v4/svelte/: Icon.svelte
icons/icons-v4/svelte/icons/: AlignLeft.svelte  Emoji.svelte  InsertColumnLeft.svelte  InsertColumnRight.svelte  InsertRowBelow.svelte  Justify.svelte  More.svelte  MoreInfo.svelte  OpenInBrowser.svelte  Quote.svelte  Redo.svelte  Undo.svelte
icons/icons-v5/: README.md
icons/icons-v5/svelte/: Icon.svelte
icons/icons-v5/svelte/icons/: AddFolder.svelte  AddressBook.svelte  DeleteFolder.svelte  RespondWithMeeting.svelte
logos/: DISCLAIMER.md
logos/nimbus-logo/: README.md
logos/nimbus-logo-v2/: README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: badge.rs  main.rs
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/messages/: de.json  en.json
ui/src/: App.svelte  app.css  main.js  main.ts
ui/src/lib/: AccountSettings.svelte  AccountSetup.svelte  AddressAutocomplete.svelte  AttachmentThumb.svelte  CalendarInviteCard.svelte  CalendarView.svelte  Compose.svelte  ContactsView.svelte  CreateTalkRoomModal.svelte  DateField.svelte  EmailKindChip.svelte  EmojiPicker.svelte  EventEditor.svelte  FileTypeIcon.svelte  FilesView.svelte  Icon.svelte  IconRail.svelte  LockScreen.svelte  MailList.svelte  MailView.svelte  MoveFolderPicker.svelte  NcPreview.svelte  NextcloudFileBrowser.svelte  NextcloudFilePicker.svelte  NextcloudSettings.svelte  NotesView.svelte  ReminderCard.svelte  RichTextEditor.svelte  SearchBar.svelte  SearchResults.svelte  SecuritySettings.svelte  Select.svelte  Sidebar.svelte  StandaloneCompose.svelte  StandaloneMail.svelte  StandaloneReminder.svelte  SyncStatusRow.svelte  TalkView.svelte  TimeField.svelte  Toggle.svelte  (+15 more)
ui/src/lib/icons/: AlignCenter.svelte  AlignRight.svelte  ArrowLeft.svelte  Attachment.svelte  BulletList.svelte  Clear.svelte  Close.svelte  Compose.svelte  Delete.svelte  DeleteColumn.svelte  DeleteRow.svelte  DesignPalette.svelte  Dictate.svelte  Download.svelte  EmailEnvelope.svelte  Filter.svelte  Flag.svelte  FullScreen.svelte  GlobalInbox.svelte  Group.svelte  HighlightText.svelte  Important.svelte  InsertImage.svelte  InsertRowAbove.svelte  Location.svelte  MoveToFolder.svelte  NavBackward.svelte  Notes.svelte  Notification.svelte  NumberedList.svelte  Offline.svelte  Online.svelte  Passphrase.svelte  ReplyAll.svelte  RsvpTentative.svelte  SecurityKey.svelte  Settings.svelte  ShareLinks.svelte  ShieldImageBlocked.svelte  SignOut.svelte  (+13 more)
ui/src/styles/: main.css
