[workspace]
resolver = "2"
members = [
    "crates/nimbus-core",
    "crates/nimbus-imap",
    "crates/nimbus-smtp",
    "crates/nimbus-jmap",
    "crates/nimbus-caldav",
    "crates/nimbus-carddav",
    "crates/nimbus-nextcloud",
    "crates/nimbus-store",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Videothek/nimbus-mail"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP client (for Nextcloud API, JMAP, CalDAV, CardDAV)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# IMAP
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1.13", features = ["attributes"] }
futures = "0.3"
# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
# Internal crates
nimbus-core = { path = "crates/nimbus-core" }
nimbus-imap = { path = "crates/nimbus-imap" }
nimbus-smtp = { path = "crates/nimbus-smtp" }
nimbus-jmap = { path = "crates/nimbus-jmap" }
nimbus-caldav = { path = "crates/nimbus-caldav" }
nimbus-carddav = { path = "crates/nimbus-carddav" }
nimbus-nextcloud = { path = "crates/nimbus-nextcloud" }
nimbus-store = { path = "crates/nimbus-store" }
