[workspace]
resolver = "2"
members = [
    "crates/nimbus-core",
    "crates/nimbus-imap",
    "crates/nimbus-smtp",
    "crates/nimbus-jmap",
    "crates/nimbus-caldav",
    "crates/nimbus-carddav",
    "crates/nimbus-nextcloud",
    "crates/nimbus-store",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Videothek/nimbus-mail"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP client (for Nextcloud API, JMAP, CalDAV, CardDAV)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# IANA timezone database. Used by nimbus-caldav to resolve
# `DTSTART;TZID=America/New_York:...`-style values to UTC. The crate
# bundles the tz database (~600 KB) so we don't need system tzdata.
chrono-tz = "0.10"
# RFC 5545 recurrence-rule engine. Used by nimbus-caldav to expand a
# VEVENT master's RRULE/RDATE/EXDATE into concrete occurrences over a
# requested date window. The crate handles DST transitions, BYDAY /
# BYMONTHDAY etc. quirks, and UNTIL semantics — things we really
# don't want to reimplement.
rrule = "0.14"
# App data directories
dirs = "6"
# OS keychain access (Credential Manager / Keychain / Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# SQLite for the local mail cache. `bundled-sqlcipher-vendored-openssl`
# ships SQLCipher (a fork of SQLite that adds AES-256 transparent
# at-rest encryption) along with a vendored OpenSSL, so users don't
# need a system SQLite or OpenSSL installed. Every connection has to
# run `PRAGMA key = '...'` before issuing queries — see pool.rs.
# `chrono` enables conversion between SQL timestamps and DateTime<Utc>.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
# Connection pool — readers don't block each other, writers serialize cleanly.
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# Cryptographically secure random bytes for generating the DB master key.
getrandom = "0.2"
# Cross-platform "open this URL in the user's default browser" — used
# by the Nextcloud Login Flow v2 command to bounce the user out to
# their NC login page.
open = "5"
# Hex encoding for the keychain-stored master key and the SQLCipher
# `PRAGMA key = "x'<hex>'"` literal syntax.
hex = "0.4"
# IMAP
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1.13", features = ["attributes"] }
futures = "0.3"
# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
# MIME / email parsing (headers, bodies, encodings)
mail-parser = "0.11"
# XML for CardDAV / CalDAV PROPFIND + REPORT bodies and the multistatus
# responses they return. We hand-roll the small XML we emit and parse
# the responses with quick-xml's pull parser; no full DAV client crate
# is needed.
quick-xml = { version = "0.36", features = ["serialize"] }
# vCard 3 / 4 + iCalendar parser. Backs nimbus-carddav's contact import
# (vcard feature) and nimbus-caldav's event sync (ical feature). Default
# features also pull in a generator we don't need, so we ask only for
# the two parser modules we actually use.
ical = { version = "0.11", default-features = false, features = ["vcard", "ical"] }
# vCard PHOTO is base64-encoded inline; we decode once on import so
# the cached row holds raw image bytes.
base64 = "0.22"
# UUIDs for fresh vCard UIDs on contact create — we picked `urn:uuid:`
# form to match what other CardDAV clients emit.
uuid = { version = "1", features = ["v4"] }
# Internal crates
nimbus-core = { path = "crates/nimbus-core" }
nimbus-imap = { path = "crates/nimbus-imap" }
nimbus-smtp = { path = "crates/nimbus-smtp" }
nimbus-jmap = { path = "crates/nimbus-jmap" }
nimbus-caldav = { path = "crates/nimbus-caldav" }
nimbus-carddav = { path = "crates/nimbus-carddav" }
nimbus-nextcloud = { path = "crates/nimbus-nextcloud" }
nimbus-store = { path = "crates/nimbus-store" }
