[package]
name = "nimbus-app"
version.workspace = true
edition.workspace = true

[dependencies]
nimbus-core.workspace = true
nimbus-imap.workspace = true
nimbus-smtp.workspace = true
nimbus-jmap.workspace = true
nimbus-caldav.workspace = true
nimbus-carddav.workspace = true
nimbus-nextcloud.workspace = true
nimbus-store.workspace = true
nimbus-discovery.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# Desktop notifications (Issue #16). The plugin is registered on the
# Rust side so JS can `sendNotification` through the capability-gated
# IPC; Rust itself only emits events — the frontend owns formatting.
tauri-plugin-notification = "2"
# Native "Save As" / "Open" file dialogs. Used by the attachment
# Download action so the user can pick where to save the file instead
# of it landing in the default Downloads folder silently.
tauri-plugin-dialog = "2"
# Opens a URL in the system default browser. Used by the Nextcloud
# Login Flow v2 command to bounce the user out to their NC login page.
open = { workspace = true }

# Windows-only: needed to register an explicit AppUserModelID so toast
# notifications attribute to "Nimbus Mail" instead of falling back to
# the launching process (PowerShell / cmd / Git Bash) — see
# `set_app_user_model_id` in `main.rs`.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_UI_Shell"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
