[package]
name = "nimbus-app"
version.workspace = true
edition.workspace = true

[dependencies]
nimbus-core.workspace = true
nimbus-imap.workspace = true
nimbus-smtp.workspace = true
nimbus-jmap.workspace = true
nimbus-caldav.workspace = true
nimbus-carddav.workspace = true
nimbus-nextcloud.workspace = true
nimbus-store.workspace = true
nimbus-discovery.workspace = true
tokio.workspace = true
futures.workspace = true
font-kit.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# Desktop notifications (Issue #16). The plugin is registered on the
# Rust side so JS can `sendNotification` through the capability-gated
# IPC; Rust itself only emits events — the frontend owns formatting.
tauri-plugin-notification = "2"
# Native "Save As" / "Open" file dialogs. Used by the attachment
# Download action so the user can pick where to save the file instead
# of it landing in the default Downloads folder silently.
tauri-plugin-dialog = "2"
# "Launch on system startup" toggle (#131 follow-up).  Cross-
# platform: registers an XDG autostart entry on Linux, a
# LaunchAgent plist on macOS, and an HKCU\\…\\Run registry value
# on Windows.  Toggled from Settings → General; the user's
# `appSettings.autostart_enabled` choice is the source of truth
# and we sync it to the OS via the plugin's enable() / disable()
# IPCs.
tauri-plugin-autostart = "2"
# Used by `custom_themes_dir()` to locate the user's config root
# the same way the rest of the app's per-platform persistence
# does.  Workspace dep so we share the same major version.
dirs = { workspace = true }
# Opens a URL in the system default browser. Used by the Nextcloud
# Login Flow v2 command to bounce the user out to their NC login page.
open = { workspace = true }
# Direct libnotify access on Linux so we can pass the `DesktopEntry`
# hint that makes notifications persist in the notification center.
# `tauri-plugin-notification` uses this same crate internally but
# doesn't expose its hint API, so we wrap it ourselves.  Linux-only:
# on Windows/macOS we keep using the Tauri plugin (whose native
# integrations are better than notify-rust's non-Linux backends).
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

# Windows-only: needed to register an explicit AppUserModelID so toast
# notifications attribute to "Nimbus Mail" instead of falling back to
# the launching process (PowerShell / cmd / Git Bash) — see
# `set_app_user_model_id` in `main.rs`.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_UI_Shell"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
