[package]
name = "nimbus-caldav"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
# Named IANA zone lookup for `DTSTART;TZID=…` resolution.
chrono-tz.workspace = true
# Recurrence-rule expander. Feeds on the RRULE/RDATE/EXDATE values the
# iCalendar parser emits and produces concrete occurrences — see
# `expand.rs`.
rrule.workspace = true
# WebDAV XML — same PROPFIND / REPORT multistatus shape as CardDAV.
quick-xml.workspace = true
# iCalendar parser (`ical` feature) — pulls VEVENT/VCALENDAR handling
# out of the same crate CardDAV uses for vCards.
ical.workspace = true
