[package]
name = "nimbus-carddav"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
quick-xml.workspace = true
ical.workspace = true
base64.workspace = true
