[package]
name = "nimbus-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
# Shared TLS plumbing for nimbus-imap and nimbus-smtp lives here so
# the two protocol crates can't drift on cert validation behaviour.
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true
sha2.workspace = true
hex.workspace = true
