[package]
name = "nimbus-imap"
version.workspace = true
edition.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-imap.workspace = true
async-native-tls.workspace = true
async-std.workspace = true
futures.workspace = true
