[package]
name = "nimbus-imap"
version.workspace = true
edition.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-imap.workspace = true
async-native-tls.workspace = true
async-std.workspace = true
futures.workspace = true
mail-parser.workspace = true
chrono.workspace = true
# Base64 with custom-alphabet support — IMAP's Modified UTF-7 swaps
# `/` for `,` in the alphabet and omits padding. Used by `mutf7.rs`.
base64.workspace = true
