[package]
name = "nimbus-jmap"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
# URL manipulation for .well-known discovery and relative URL resolution
url = "2"

[dev-dependencies]
# Mock HTTP server for testing without a real JMAP server.
tokio = { workspace = true, features = ["full"] }
# We use axum to spin up a local mock JMAP server for integration tests.
axum = "0.8"
