[package]
name = "nimbus-nextcloud"
version.workspace = true
edition.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# WebDAV PROPFIND responses are XML multistatus documents. We parse
# them with the same event-driven approach nimbus-carddav uses — see
# the module doc in `files.rs` for why serde isn't a good fit here.
quick-xml.workspace = true
# `getlastmodified` arrives as an HTTP-date string that we convert to
# `DateTime<Utc>` so the UI can format it consistently.
chrono.workspace = true
