[package]
name = "nimbus-smtp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nimbus-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
lettre.workspace = true
# Used by the cert-probe path (no-verify TLS to capture a server's
# self-signed leaf cert). Lettre's TLS lives behind its own builder
# so we open a tiny tokio-rustls connection of our own here.
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
